// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render bottom slot 1`] = `
<div class="win-card">
  <div class="win-card__header">
    <div class="win-card__content">
      <div></div>
      <div class="win-card__bottom">Custom Bottom</div>
    </div>
  </div>
</div>
`;

exports[`render origin-price slot 1`] = `
<div class="win-card">
  <div class="win-card__header">
    <div class="win-card__content">
      <div></div>
      <div class="win-card__bottom">
        <div class="win-card__origin-price">Custom Origin Price</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render price & num slot 1`] = `
<div class="win-card">
  <div class="win-card__header">
    <div class="win-card__content">
      <div></div>
      <div class="win-card__bottom">
        <div class="win-card__price">Custom Price</div>
        <div class="win-card__num">Custom Num</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render thumb & tag slot 1`] = `
<div class="win-card">
  <div class="win-card__header"><a class="win-card__thumb">Custom Thumb<div class="win-card__tag">Custom Tag</div></a>
    <div class="win-card__content">
      <div></div>
    </div>
  </div>
</div>
`;

exports[`render title & desc slot 1`] = `
<div class="win-card">
  <div class="win-card__header">
    <div class="win-card__content">
      <div>Custom TitleCustom desc</div>
    </div>
  </div>
</div>
`;

exports[`render price & price-top slot 1`] = `
<div class="win-card">
  <div class="win-card__header">
    <div class="win-card__content">
      <div></div>
      <div class="win-card__bottom">Custom Price-top<div class="win-card__price">Custom Price</div>
      </div>
    </div>
  </div>
</div>
`;
